# debug

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  flash_script.jlink
boards/MBN52832DK/: CMakeLists.txt
boards/MBN52832DK/include/: board_cfg.h  board_ctrl.h
boards/MBN52832DK/src/: board_ctrl.c
chipsets/nrf52832/: CMakeLists.txt
chipsets/nrf52832/include/: chip_cfg.h  core_systick_hal.h  gpio_hal.h  radio_ctrl.h  radio_hal.h  rng_hal.h  trace_hal.h
chipsets/nrf52832/src/: clock_prv.h  core_debug_reg.h  core_itm_reg.h  core_tpiu_reg.h  gpio_hal.c  gpio_prv.h  radio_ctrl.c  radio_hal.c  radio_prv.h  rng_hal.c  trace_hal.c
common/: CMakeLists.txt
common/include/: fifo.h  maths_utils.h  message_definition.h  nosys.h  panic.h  utils.h  var_args.h
common/src/: fifo.c  maths_utils.c  nosys.c  panic.c  utils.c
include/: project_cfg.h
src/: CMakeLists.txt  main.c
